--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clock-app",
   "version": "1.0.0",
   "main": "script.js",
-   "scripts": {
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "sass": "^1.89.2",
     "vite": "^7.0.5"
   }
 }
